PostGIS 1.5.6
2012/xx/xx

 This is a bug fix release, addressing issues that have been

 - Bug Fixes
   - #547, ST_Contains memory problems, the remake 
   - #1957, ST_Distance to a one-point LineString returns NULL


PostGIS 1.5.5
2012/07/20

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.4 release.

 - Bug Fixes
   - #1825, containsproperly fix in prepared geometry.
   - #1832, crash when updating GIST index on geography column
   - #1865, don't strip comments COPY data from dumps on restore


PostGIS 1.5.4
2012/05/06

 This is a bug fix release, addressing issues that have been
 filed since the 1.5.3 release.

 - Bug Fixes
   - #547, ST_Contains memory problems (Sandro Santilli)
   - #621, Problem finding intersections with geography (Paul Ramsey)
   - #627, PostGIS/PostgreSQL process die on invalid geometry (Paul Ramsey)
   - #810, Increase accuracy of area calculation (Paul Ramsey)
   - #852, improve spatial predicates robustness (Sandro Santilli, Nicklas Avén)
   - #877, ST_Estimated_Extent returns NULL on empty tables (Sandro Santilli)
   - #1028, ST_AsSVG kills whole postgres server when fails (Paul Ramsey)
   - #1056, Fix boxes of arcs and circle stroking code (Paul Ramsey)
   - #1121, populate_geometry_columns using deprecated functions (Regin Obe
     , Paul Ramsey)
   - #1135, improve testsuite predictability (Andreas 'ads' Scherbaum)
   - #1146, images generator crashes (bronaugh)
   - #1170, North Pole intersection fails (Paul Ramsey)
   - #1179, ST_AsText crash with bad value (kjurka)
   - #1184, honour DESTDIR in documentation Makefile (Bryce L Nordgren)
   - #1227, server crash on invalid GML 
   - #1252, SRID appearing in WKT (Paul Ramsey)
   - #1264, st_dwithin(g, g, 0) doesn't work (Paul Ramsey)
   - #1344, allow exporting tables with invalid geometries (Sandro Santilli)
   - #1389, wrong proj4text for SRID 31300 and 31370 (Paul Ramsey)
   - #1406, shp2pgsql crashes when loading into geography (Sandro Santilli)